--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,19 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
+}
+
+@media (max-width: 768px) {
+  #content {
+    display: flex; /* Para que los elementos se vayan acomodando en la pantalla*/
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    text-align: center;
+  }
 }
 
 main {
@@ -17,16 +28,15 @@ h1 {
   position: absolute;
   top: 10px;
   text-align: center;
-  
 }
 
 #content {
-  height: 60%;
-  width: 600px;
+  height: 50%;
+  width: 700px;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: .4rem;
+  gap: 0.4rem;
 }
 
 form {
@@ -35,12 +45,13 @@ form {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  gap: 1rem;
   align-items: center;
+  gap: 1rem;
 }
 
-
 form > input {
+  width: 100%;
+  height: auto;
   font-size: 1.3rem;
   padding: 10px 20px;
   text-align: center;
@@ -58,25 +69,48 @@ form > div > button {
 
 #card {
   height: 100%;
-  background-color: #d2d2d2;
   width: 50%;
+  margin: 10px 20px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #d2d2d2;
 }
 
-#card > div:first-child{
+#card > div:first-child {
   height: 75%;
+  width: 100%;
   text-align: center;
 }
 
-#card > div:last-child{
+#card > div:last-child {
   height: 24%;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  gap: .2rem;
+  gap: 0.2rem;
   padding: 10px;
 }
 
 #imgPokemon {
   height: 100%;
   width: auto;
+  object-fit: cover;
+}
 
+#pokeball {
+  height: 50%;
+  animation: spin 0.8s infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
